// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom-src-paths build should generate the expected files 1`] = `
Object {
  "index.html": "
  <!DOCTYPE html>
  <html>
    <head>
      <meta charset=\\"UTF-8\\">
      <title>hello-world</title>
      <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    </head>
    <body>
      <div id=\\"app\\"><div data-reactroot=\\"\\">Hello World!</div></div>
      <script type=\\"text/javascript\\" src=\\"/main.js\\"></script>
    </body>
  </html>
",
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`custom-src-paths start should start a development server 1`] = `
Object {
  "content": "<!DOCTYPE html><html><head>
      <meta charset=\\"UTF-8\\">
      <title>hello-world</title>
      <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    </head>
    <body>
      <div id=\\"app\\"><div data-reactroot=\\"\\">Hello World!</div></div>
      <script type=\\"text/javascript\\" src=\\"/main.js\\"></script>
    
  
</body></html>",
  "errors": Array [],
  "sourceHtml": "
  <!DOCTYPE html>
  <html>
    <head>
      <meta charset=\\"UTF-8\\">
      <title>hello-world</title>
      <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    </head>
    <body>
      <div id=\\"app\\"><div data-reactroot=\\"\\">Hello World!</div></div>
      <script type=\\"text/javascript\\" src=\\"/main.js\\"></script>
    </body>
  </html>
",
  "warnings": Array [],
}
`;
